[package]
name = "gluesql_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "gluesql_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
gluesql = "0.15.0"
once_cell = "1.18.0"
rustler = "0.25.0"
rustler_bigint = "0.1.0"
tokio = { version = "1.34.0", features = ["full"] }
